Implementación funcionalidad de colocar ruedas en juego pit stop

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -322,41 +322,42 @@ body>h2+section:nth-child(4)>h3 {
 }
 
 /* Especificidad 012 */
+/* Huecos para colocar las ruedas */
 section:first-of-type>div {
     position: absolute;
     width: 13%;
     height: 15%;
     border-radius: 10%;
     border-style: dashed;
-    z-index: 2;
+    border-color: black;
 }
 
 /* Especificidad 022 */
 /* Rueda de arriba izquierda */
 section:first-of-type>div:nth-of-type(1) {
-    left: 14%;
-    top: 9%;
+    left: 16%;
+    top: 12%;
 }
 
 /* Especificidad 022 */
 /* Rueda de arriba derecha */
 section:first-of-type>div:nth-of-type(2) {
     left: 78%;
-    top: 9%;
+    top: 12%;
 }
 
 /* Especificidad 022 */
 /* Rueda de abajo izquierda */
 section:first-of-type>div:nth-of-type(3) {
-    left: 14%;
-    top: 81%;
+    left: 16%;
+    top: 77%;
 }
 
 /* Especificidad 022 */
 /* Rueda de abajo derecha */
 section:first-of-type>div:nth-of-type(4) {
     left: 78%;
-    top: 81%;
+    top: 77%;
 }
 
 /* Especificidad 013 */
@@ -364,8 +365,8 @@ section:first-of-type>div+img {
     width: 100%;;
 }
 
-/* Especificidad 012 */
-section:nth-of-type(2)>div[draggable="true"] {
+/* Especificidad 011 */
+div[draggable="true"] {
     width: 13%;
     height: 10vh;
     border-radius: 10%;
@@ -373,6 +374,20 @@ section:nth-of-type(2)>div[draggable="true"] {
     margin: 1%;
     border-bottom: dashed yellow 0.3em;
     border-top: dashed yellow 0.3em;
+    z-index: 2;
+}
+
+/* Especificidad 011 */
+/* Rueda ya colocada en el slot */
+div>div {
+    width: 100%;
+    height: 100%;  
+    border-radius: 10%;
+    background-color: black;
+    margin: 1%;
+    border-bottom: dashed yellow 0.3em;
+    border-top: dashed yellow 0.3em;
+    z-index: 2;
 }
 
 /* Espesificidad 013 */
