Eliminación de todos los manejos de eventos por medio de atributos HTML

--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -392,7 +392,7 @@ div[draggable="true"] {
 /* Especificidad 002 */
 /* Rueda ya colocada en el slot */
 
-div>div {
+body>section>section>div>div {
     width: 100%;
     height: 100%;  
     border-radius: 10%;
