--- a/estilo/f1_manager.css
+++ b/estilo/f1_manager.css
@@ -17,6 +17,7 @@ main>section:nth-of-type(3)>section:first-of-type>h3 {
 }
 
 /* Especificidad 023 */
+/* Panel de simulación */
 main>section:nth-of-type(3)>section:nth-of-type(2) {
     grid-column: 2/-1;
     grid-row: 1/-1;
@@ -47,6 +48,7 @@ main>section:nth-of-type(3)>section:nth-of-type(2)>form>button {
 }
 
 /* Especificidad 024 */
+/* Panel de clasificación final */
 main>section:nth-of-type(3)>section:nth-of-type(2)>section {
     grid-column: 1/-1;
     grid-row: 3;
@@ -60,4 +62,45 @@ main>section:nth-of-type(3)>section:nth-of-type(2)>article {
     color: white;
     margin:2%;
     border-radius: 5%;
+}
+
+/* Especificidad 025 */
+main>section:nth-of-type(3)>section:nth-of-type(2)>section>h3 { 
+    background-color: #1b365d;
+    color: #f2c75c;
+    margin: 1% 25%;
+}
+
+@media only screen and (max-width: 800px) {
+
+    /* Especificidad 023 */
+    /* Se reduce el número de columnas del panel de simulación */
+    main>section:nth-of-type(3)>section:nth-of-type(2) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    /* Especificidad 023 */
+    /* Se reduce el número de columnas del panel de simulación */
+    main>section:nth-of-type(3)>section:nth-of-type(2) {
+        grid-template-columns: 1fr;
+    }
+
+    /* Especificidad 025 */
+    /* Se reduce el margen horizontal */
+    main>section:nth-of-type(3)>section:nth-of-type(2)>section>h3 {
+        margin: 1% 10%;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+
+    /* Especificidad 012 */
+    main>section:nth-of-type(3) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
 }
