--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -96,6 +96,7 @@ li {
 }
 
 /* Especificidad 003 */
+/* No es necesario establecer un color de fondo puesto que lo hereda de body */
 ol>li::marker {
     content: counters(list-item, '.') '.';
     font-weight: bold;
@@ -391,7 +392,7 @@ div[draggable="true"] {
 
 /* Especificidad 002 */
 /* Rueda ya colocada en el slot */
-
+/* No hace falta establecer un color de primer plano puesto que no tiene texto y lo heredaría de body */	
 body>section>section>div>div {
     width: 100%;
     height: 100%;  
