--- a/estilo/f1_manager.css
+++ b/estilo/f1_manager.css
@@ -97,6 +97,7 @@ main>section:nth-of-type(3)>section:nth-of-type(2)>section>h3 {
 @media only screen and (max-width: 400px) {
 
     /* Especificidad 012 */
+    /* Se cambia el display de grid a flex */
     main>section:nth-of-type(3) {
         display: flex;
         flex-direction: column;
