--- a/estilo/f1_manager.css
+++ b/estilo/f1_manager.css
@@ -5,10 +5,18 @@ main>section:nth-of-type(3) {
     grid-template-columns: repeat(4, 1fr);
 }
 
+/* Especificidad 013 */
+main>section:nth-of-type(3)>h3 {
+    grid-column: 1/-1;
+    grid-row: 1;
+    text-align: center; 
+    background-color: #1b365d;
+    color: #f2c75c;
+}
+
 /* Especificidad 023 */
 main>section:nth-of-type(3)>section:first-of-type {
     grid-column: 1;
-    grid-row: 1/-1;
 }
 
 /* Especificidad 024 */
@@ -20,7 +28,6 @@ main>section:nth-of-type(3)>section:first-of-type>h3 {
 /* Panel de simulación */
 main>section:nth-of-type(3)>section:nth-of-type(2) {
     grid-column: 2/-1;
-    grid-row: 1/-1;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 0.2fr 0.2fr 1fr;
