--- a/estilo/f1_manager.css
+++ b/estilo/f1_manager.css
@@ -1,4 +1,3 @@
-
 /* Especificidad 012 */
 main>section:nth-of-type(3) {
     display: grid;
@@ -22,6 +21,12 @@ main>section:nth-of-type(3)>section:first-of-type {
 /* Especificidad 024 */
 main>section:nth-of-type(3)>section:first-of-type>h3 {
     padding: 0%;
+}
+
+/* Especificidad 024 */
+main>section:nth-of-type(3)>section:first-of-type>form {
+    display: flex;
+    flex-direction: column;
 }
 
 /* Especificidad 023 */
